# groove

./: .gitignore  AGENTS.md  CLAUDE.md  README.md  components.json  eslint.config.mjs  index.html  package-lock.json  package.json  setup-linux.sh  setup-macos.sh  tsconfig.json  vite.config.ts  vitest.config.ts
.github/: dependabot.yml  (+1 more)
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/binaries/: groove-x86_64-unknown-linux-gnu
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: diagnostics.rs  git_gh.rs  lib.rs  main.rs  terminal.rs  testing_environment.rs  workspace.rs
src-tauri/src/backend/: mod.rs
src-tauri/src/backend/app_state_management/: mod.rs  state_keys.rs
src-tauri/src/backend/assistant_rules/: rules_runtime.rs
src-tauri/src/backend/common/: constants.rs  dtos.rs  mod.rs  module_scopes.rs  platform_env.rs  prelude.rs  process_command.rs
src-tauri/src/backend/diagnostics_process_control/: diagnostics_runtime.rs  diagnostics_scope.rs  mod.rs
src-tauri/src/backend/doctrine_intelligence/: doctrine_runtime.rs
src-tauri/src/backend/event_polling_emission_pipeline/: event_scope.rs  mod.rs
src-tauri/src/backend/frontend_command_registry/: assistant_commands.rs  command_entry.rs  diagnostics_commands.rs  events_commands.rs  git_gh_commands.rs  groove_commands.rs  intelligence_commands.rs  jira_commands.rs  mod.rs  motherduck_commands.rs  opencode_commands.rs  startup_commands.rs  terminal_commands.rs  testing_commands.rs  workspace_commands.rs
src-tauri/src/backend/git_github_bridge/: git_scope.rs  mod.rs
(+429 files in other folders)
