[package]
name = "groove-desktop"
version = "0.1.0"
description = "Groove desktop app"
authors = ["you"]
edition = "2021"

[lib]
name = "groove_desktop_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri = { version = "2", features = [] }
uuid = { version = "1", features = ["v4"] }
walkdir = "2"
rfd = "0.15"
time = { version = "0.3", features = ["formatting"] }
portable-pty = "0.9"
